--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "proxy":"http://localhost:8000",
     "lint": "next lint"
   },
   "dependencies": {
