--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,48 @@
 # Development
 FROM python:3.11-slim AS development
 WORKDIR /app
-COPY requirements.txt .
+# Set environment variables to optimize Python
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Install dependencies
+RUN pip install --upgrade pip
+COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
-COPY . .
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
 
 # Production
 FROM python:3.11-slim AS production
+RUN useradd -m -r appuser && \
+    mkdir /app && \
+    chown -R appuser /app
+
+# Copy the Python dependencies from the builder stage
+COPY --from=builder /usr/local/lib/python3.13/site-packages/ /usr/local/lib/python3.13/site-packages/
+COPY --from=builder /usr/local/bin/ /usr/local/bin/
+
+ # set work directory
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt gunicorn
 COPY . .
 
-# Make entrypoint script executable
-RUN chmod +x /app/entrypoint.sh
+
+
+# Set environment variables to optimize Python
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1 
+
+# Switch to non-root user
+USER appuser
+
 # Expose port
 EXPOSE 8000
+
+# Make entrypoint script executable
+RUN chmod +x /app/entrypoint.sh
 
 RUN python manage.py collectstatic --noinput
 
