--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,16 +3,15 @@
 services:
   db:
     restart: always
-    image: postgres:13
-    environment:
-      POSTGRES_HOST: localhost
-      POSTGRES_DB: padichat_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: dev_password
+    image: postgres:13    
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
    
 
   redis:
@@ -67,10 +66,10 @@ services:
     depends_on:
       - db
       - redis
-  adminer:
-        image: adminer
-        restart: always      
-        ports:
-          - "8080:80"
+  #adminer:
+        #image: adminer
+        #restart: always      
+        #ports:
+          #- "8080:80"
 volumes:
   postgres_data:
