--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,16 +3,19 @@
 services:
   db:
     restart: always
-    image: postgres:13-alpine3.21
+    image: postgres:13   
     container_name: db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: padichat_db
     ports:
-      - "5431:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=padichat_db
+     
+  
+   
    
 
   redis:
@@ -32,8 +35,12 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
-    env_file:
-      - ./backend/env/.env.local 
+   
+    environment:
+      - POSTGRES_HOST=db     
+      - POSTGRES_NAME=padichat_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
    
     depends_on:
       - db
@@ -67,10 +74,10 @@ services:
     depends_on:
       - db
       - redis
-  adminer:
-        image: adminer
-        restart: always      
-        ports:
-          - "8080:8080"
+  # adminer:
+  #       image: adminer
+  #       restart: always      
+  #       ports:
+  #         - "8081:8080"
 volumes:
   postgres_data:
